# opencv-playground

./: CMakeLists.txt  background_substraction.cpp  edges.cpp  obstacle_avoidance.cpp
